--- a/src/components/assets/style.css
+++ b/src/components/assets/style.css
@@ -246,5 +246,41 @@ body{
         height:0px;
         font-size: 0;
     }
-    to{height: 30px; font-size: inherit;}
+    to{
+        height: 30px;
+        font-size: inherit;
+    }
+}
+
+.completed-tasks-container-br{
+    border: 1px solid black;    
+    margin: 5px;
+    padding-left: 5px;
+    border-radius: 5px;
+    padding-right: 15px;
+}
+.completed-tasks-container{
+    transition: 0.5s;
+
+}
+/* width */
+.completed-tasks-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.completed-tasks-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px grey; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+.completed-tasks-container::-webkit-scrollbar-thumb {
+  background: rgb(220, 177, 109); 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+.completed-tasks-container::-webkit-scrollbar-thumb:hover {
+  background: rgb(220, 177, 109); 
 }
